OpenJMLTest/test/gitbug573b/expected
warning: There is no java file on the sourcepath corresponding to the given jml file: test/gitbug573b/pckg/A.jml
test/gitbug573b/pckg/A.jml:3: error: This type declaration (pckg.A) is not matched by a binary class
public class A {
       ^
Operation not performed because of parse or type errors
1 error
1 warning
